[metadata]
name = networking-l2gw-tempest-plugin
summary = Tempest Plugin for Neutron L2 Gateway.
description-file =
    README.rst
author = OpenStack
author-email = openstack-discuss@lists.openstack.org
home-page = https://git.openstack.org/cgit/openstack/networking-l2gw-tempest-plugin
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6

[files]
packages =
    networking_l2gw_tempest_plugin

[entry_points]
tempest.test_plugins =
    networking_l2gw_tempest_plugin = networking_l2gw_tempest_plugin.plugin:NeutronL2gwTempestPlugin

[compile_catalog]
directory = networking_l2gw_tempest_plugin/locale
domain = networking_l2gw_tempest_plugin

[update_catalog]
domain = networking_l2gw_tempest_plugin
output_dir = networking_l2gw_tempest_plugin/locale
input_file = networking_l2gw_tempest_plugin/locale/networking_l2gw_tempest_plugin.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = networking_l2gw_tempest_plugin/locale/networking_l2gw_tempest_plugin.pot
